# prototype-0

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix  readme.md  seed.sql
data/: .gitignore
migrations/: 20230913130433_create-post-table.sql  20230915101642_personas.sql
src/: db_setup.rs  main.rs  persona.rs  prompts.rs
