[package]
name = "global-brain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chatgpt_rs = { version = "1.2.2", features = ["functions"] }
sqlx = { version = "0.7.1", features = ["sqlite", "macros", "runtime-tokio"] }
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.75"
serde = { version = "1.0.168", features = ["derive"] }
serde_json = "1.0.106"
